8240138: Cleanup HtmlTree
Reviewed-by: prappo